[flake8]
max-line-length = 88
ignore = E203, E266, E501, W503, E231

[isort]
default_section = THIRDPARTY
# comma after multiline breaks like black:
include_trailing_comma = true
known_first_party = fair
# black default line length:
line_length = 88
# multiline breaks like black:
multi_line_output = 3
skip = versioneer.py, src/scmdata/_version.py

[metadata]
description-file = README.rst

[tool:pytest]
testpaths = tests

[versioneer]
VCS = git
style = pep440
versionfile_source = fair/_version.py
versionfile_build = fair/_version.py
tag_prefix = v
parentdir_prefix = fair-
